Archive2/96/7aec3bd9e418cd/output
main.cpp: In function 'int main()':
main.cpp:21:15: error: 'Widget' is an inaccessible base of 'Gadget'
     function(g); //<- works (I do not want this to compile though)
               ^
main.cpp:5:6: error:   initializing argument 1 of 'void function(Widget)'
 void function (Widget w){}
      ^
